[package]
name = "rust2email"
version = "0.1.0"
authors = ["Vincent Gatine <nurelin@nurelin.eu>"]

[dependencies]
atom_syndication = "*"
clap = "*"
encoding = "*"
failure = "*"
html2text = "*"
lettre = "*"
lettre_email = "*"
reqwest = { git = "https://github.com/nurelin/reqwest" }
rss = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
#slog = "*"
#sloggers = "*"
toml = "*"
app_dirs = "*"
xml-rs = "*"
diesel = {version = "*", features = ["sqlite"]}
diesel_migrations = "*"

[profile.release]
lto = true
