[package]
name = "rust2email"
version = "0.1.0"
authors = ["Vincent Gatine <nurelin@nurelin.eu>"]
edition = "2018"

[dependencies]
structopt = "0.2.14"
failure = "0.1.5"
log = "0.4.6"
fern = "0.5.7"
config = "0.9.2"
serde = "1.0.84"
serde_derive = "1.0.84"
toml = "0.4.10"
serde_json = "1.0.34"
app_dirs = "1.2.1"
xml-rs = "0.8.0"
fs2 = "0.4.3"

atom_syndication = "0.6.0"
rss = "1.6.1"
encoding = "0.2.33"
html2text = "0.1.8"
reqwest = "0.9.6"
lettre = "0.9.2"
lettre_email = "0.9.2"

[profile.release]
lto = true
