[package]
name = "rust2email"
version = "0.1.0"
authors = ["Vincent Gatine <nurelin@nurelin.eu>"]
edition = "2018"

[dependencies]
atom_syndication = "0.9"
clap = "2.33"
encoding = "0.2"
error-chain = "0.12"
html2text = "0.2"
lettre = "0.9"
lettre_email = "0.9"
reqwest = "0.10"
rss = "1.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.5"
sloggers = "1.0"
toml = "0.5"
xdg = "2.2"
xml-rs = "0.8"
futures = "0.3"
futures-util = "0.3"

[profile.release]
lto = true
